--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-globe"></i>
-                    <span>shreeram.org</span>
+                    <span>https://patu2510.github.io/Shreeram/ </span>
                 </div>
                 <div class="contact-item">
                     <i class="fas fa-map-marker-alt"></i>
